<resources>
    <string name="app_name">Photovoltaics</string>
    <string name="action_share">Share</string>
    <string name="action_help">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_title">Title</string>
    <string name="help_title_dummy">How to use?</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_subject">Subject</string>
    <string name="title_description">Description</string>
    <string name="result_title">Result</string>
    <string name="result_title_summary">Summary</string>
    <string name="result_title_yearly_income_dummy">Yearly Income</string>
    <string name="result_title_detail">Result Detail</string>
    <string name="help_center_title_contact_us">Contact Us</string>
    <string name="action_send">send</string>
    <string name="title_quick_action">Quick Action</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_help_center">Help Center</string>
    <string name="title_history">History</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_roof_length">Roof Length</string>
    <string name="title_roof_width">Roof Width</string>
    <string name="title_pln">PLN</string>
    <string name="title_help_center">Help Center</string>
    <string name="initial_data_title_gmt">GMT</string>
    <string name="initial_data_title_longtitude">Longtitude</string>
    <string name="initial_data_title_latitude">Latitude</string>
    <string name="initial_data_title_collector_tilt">Collector Tilt</string>
    <string name="initial_data_title_azimuth_collector">Azimuth Collector</string>
    <string name="title_initial_data">Initial Data</string>
    <string name="title_installed_capacity">Installed Capacity</string>
    <string name="installed_capacity_title_inverter">Inverter</string>
    <string name="installed_capacity_title_installed_capacity_max">Installed Capacity Max</string>
    <string name="title_investment_price">Investment Price</string>
    <string name="investment_price_title_pv_price">PV Price</string>
    <string name="investment_price_title_inverter_price">Inverter Price</string>
    <string name="investment_price_title_mounting_price">Mounting</string>
    <string name="investment_price_title_other_price">Other</string>
    <string name="investment_price_title_total_price">Total</string>
    <string name="title_income">Income</string>
    <string name="income_title_energy">Energy</string>
    <string name="msg_coordinate_double">%1$f°</string>
    <string name="msg_coordinate_int">%1$d°</string>
    <string name="msg_meter">%1$dm</string>
    <string name="msg_volt_amper_int">%1$dV⋅A</string>
    <string name="msg_volt_amper_double">%1$gV⋅A</string>
    <string name="msg_watt_peak_double">%1$gWp</string>
    <string name="msg_watt_peak_int">%1$dWp</string>
    <string name="msg_price">Rp%1$s</string>
    <string name="msg_energy">%1$gkWh/year</string>
    <string name="msg_date">%1$s, %2$s</string>
    <string name="title_feasibility_test">Feasibility Test</string>
    <string name="action_clear">clear</string>
    <string name="title_id">ID</string>
    <string name="invalid_msg">%1$s is invalid</string>
    <string name="invalid_width">Width is invalid</string>
    <string name="invalid_length">Length is invalid</string>
    <string name="invalid_pln_power">PLN Power is invalid</string>
    <string name="msg_what_is_photovoltaics">Photovoltaics is the direct conversion of light into electricity at the atomic level. Some materials exhibit a property known as the photoelectric effect that causes them to absorb photons of light and release electrons. When these free electrons are captured, an electric current results that can be used as electricity. \n \n Knier, Gil. (2002). <i>How do Photovoltaics Work?</i>, NASA SCIENCE</string>
    <string name="msg_why_doing_feasibility_test">The feasibility study determines if the solar project gets the green light by identifying roadblocks in the beginning of the planning phase. \n \n Lozanova, Sarah. (3 Juni 2021). <i>What Is A Solar Energy Feasibility Study?</i>. Greenlancer </string>
    <string name="msg_what_is_the_requirement_for_feasibility_test">We need the length and width of the roof, also the PLN power you\'re planning to use</string>
    <string name="title_what_is_photovoltaics">What Is Photovoltaics</string>
    <string name="title_why_doing_feasibility_test">Why Doing A Feasibility Test</string>
    <string name="title_what_is_the_requirement_for_feasibility_test">What Is The Requirement For Feasibility Test</string>

    <string-array name="power_limit">
        <item><font color="#757575">Power limit</font></item>
        <item>900</item>
        <item>1300</item>
        <item>2200</item>
        <item>3500</item>
        <item>5500</item>
        <item>6600</item>
    </string-array>

</resources>
